feat: add ordering-flex-items

--- a/flexbox/display-flex-direction0.html
+++ b/flexbox/display-flex-direction0.html
@@ -36,7 +36,9 @@
         }
 
         section {
+            /* display to define `flex items` */
             display: flex;
+            /* can be column or row, with `-reverse` or not to invert order of items */
             flex-direction: row-reverse;
         }
     </style>
