feat: show more 1 example

--- a/flexbox/align-items0.html
+++ b/flexbox/align-items0.html
@@ -30,6 +30,10 @@
             /* apply vertical alignment */
             align-items: center;
         }
+
+        button:last-child {
+            align-self: flex-end;
+        }
     </style>
 </head>
 <body>
