feat: update colors

--- a/flexbox/display-flex-direction0.html
+++ b/flexbox/display-flex-direction0.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background: purple;
+            background: #000000;
             height: 100px;
         }
 
@@ -28,7 +28,7 @@
         article {
             padding: 10px;
             margin: 10px;
-            background: aqua;
+            background: #e17575;
         }
 
         article:nth-child(3) {
